--- a/app/(pages)/_Navbar/Nav.module.scss
+++ b/app/(pages)/_Navbar/Nav.module.scss
@@ -1,78 +1,65 @@
 .nav {
-  height: 72px;
-  width: 100%;
-  padding: 0 5rem;
-  justify-content: space-between;
   display: flex;
+  width: 90rem;
+  height: 6rem;
+  padding: 2.5rem 6.25rem 0.625rem 6.25rem;
+  flex-direction: row; 
   align-items: center;
-
-  /* positioning */
+  gap: 0.625rem;
+  background-color: var(--white);
+  box-shadow: 0 5px 50px rgba(126, 132, 160, 0.10);
+  
   position: fixed;
   top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 1000;
 
-  /* appearance */
-  background-color: #fbfbfb;
 }
 
 .logo {
   display: flex;
   align-items: center;
-
-  /* clickable area feels nicer */
-  padding: 0.25rem;
+  position: relative;
+  width: 6.5625rem;
+  height: 6.5625rem;
+  aspect-ratio: 1/1;
+  overflow: hidden;
+  flex-shrink: 0; 
+  justify-content: center;
 
   img {
-    display: block;
+   object-fit: cover;;
   }
 }
 
 .pages {
   margin-left: auto;
-
   display: flex;
   align-items: center;
   gap: 2.5rem;
-
-  padding: 0;
-  margin-right: 0;
-
-  list-style: none; // remove bullets at UL level
+  
+  list-style: none; 
 
   li {
-    list-style: none; // 🔴 IMPORTANT: remove bullets at LI level
+    list-style: none; // 
     display: flex;
     align-items: center;
   }
 
   a {
-    text-decoration: none; // 🔴 removes underline
-    color: #1a1a1a;        // 🔴 overrides blue/purple
-
+    font-family: "Space Grotesk";
+    color: var(--black);        
     font-size: 0.95rem;
     font-weight: 500;
+    line-height: normal;
+    text-decoration: none;
 
     position: relative;
     transition: color 0.2s ease;
 
     &:hover {
-      color: #0056ff;
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: -6px;
-      width: 100%;
-      height: 2px;
-      background-color: #0056ff;
-      transform: scaleX(0);
-      transition: transform 0.2s ease;
-    }
-
-    &:hover::after {
-      transform: scaleX(1);
+      color: var(--navy);
     }
   }
 }
