--- a/app/(pages)/_Contactform/Contact.module.scss
+++ b/app/(pages)/_Contactform/Contact.module.scss
@@ -1,23 +1,46 @@
 .container{
     display: flex;
+    width: 77.625rem;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 4rem 0;
+    max-width:1000px;
+    margin: 6rem auto;
+    padding: 3rem;
+    background-color: var(--white);
+    box-shadow: 0 5px 50px rgba(0,0,0,0.08);
+    border-radius: 1.5rem;
 }
 
 .title{
-    font-size: 2.5rem;
+    font-family: Oxanium; 
+    color: var(--Navy);
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .form{
-
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-end;
+    gap: 3.5rem;
+    align-self: stretch;
 }
 
 .row{
+    display:flex;
+    align-items: center;
+    gap: 1.5rem; 
 
+    input{
+        flex: 1; 
+    }
 }
 
+input, 
+textarea{ 
+    
+}
 .submit{
 
 }
