--- a/app/(pages)/_globals/globals.scss
+++ b/app/(pages)/_globals/globals.scss
@@ -1,10 +1,10 @@
 :root {
-  --black: #2b2b2b;
-  --dark-gray: #575757;
+  --off-black: #2b2b2b;
+  --gray: #575757;
   --light-gray: #b6b6b6;
-  --white: #f7f7f7;
+  --off-white: #f7f7f7;
   --midnight: #000138;
-  --navy: #172b54;
+  --space-blue: #172b54;
 }
 
 * {
