--- a/app/(pages)/_components/pastMissions/pastMissions.module.scss
+++ b/app/(pages)/_components/pastMissions/pastMissions.module.scss
@@ -1,18 +1,17 @@
 .PastMissions {
   background-color: var(--off-white);
-  padding: 42.4px 90px; 
+  padding: 0 6.25rem;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 2rem;
+  gap: 0.625rem;
 }
 
 .header {
   display: flex;
-  padding: 0 6.25rem;
   align-items: center;
   gap: 0.625rem;
   align-self: stretch;
@@ -32,7 +31,9 @@
 
 .carouselWrapper {
   width: 100%;
-  overflow: hidden;
+  overflow-x: auto;
+  overflow-y: hidden;
+  scrollbar-width: none;
 }
 
 .projectGrid {
@@ -42,11 +43,7 @@
   flex-direction: row;
   align-items: flex-start;
   gap: 0.625rem;
-  animation: spin 30s linear infinite;
-
-  &:hover {
-    animation-play-state: paused;
-  }
+  width: max-content;
 }
 
 .projectCard {
@@ -56,71 +53,69 @@
   width: 28.125rem;
   flex-direction: column;
   align-items: flex-start;
-}
+  flex-shrink: 0;
 
-.image {
-  img {
+  .image {
+    img {
     display: block;
     height: 15.625rem;
     width: 28.125rem;
     align-self: stretch;
     border-radius: 0.9375rem 0.9375rem 0 0;
     border: 1px solid var(--midnight);
+    }
   }
-}
 
-.cardLabel {
-  // project card below image 
-  display: flex;
-  padding: 2rem;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 1rem;
-  align-self: stretch;
-  border-radius: 0 0 0.9375rem 0.9375rem;
-  background: var(--midnight);
-  height: 20.375rem;
+  .cardLabel {
+    // project card below image 
+    padding: 2rem;
+    border-radius: 0 0 0.9375rem 0.9375rem;
+    background: var(--Blue-Gradient, linear-gradient(180deg, #000138 0%, #172B54 100%));
+    height: 20.375rem;
+    position: relative;
 
-  h2{
-    // project title 
-    color: var(--off-white);
-    font-family: Oxanium;
-    font-size: 2.5rem;
-    font-weight: 500;
-  }
-  h3 {
-    // sub text
-    color: var(--light-gray);
-    font-family: "Space Grotesk";
-    font-size: 1rem;
-    font-weight: 400;
-}
-  h4{
-    // body text 
-    color: var(--light-gray);
-    font-family: "Space Grotesk";
-    font-size: 1.25rem;
-    font-weight: 400;
-  }
-  button{
-    // button
-    display: flex;
-    width: 14.0625rem;
-    height: 3.125rem;
-    padding: 0.625rem;
-    justify-content: center;
-    align-items: center;
-    gap: 0.625rem;
+    h2{
+      // project title 
+      color: var(--off-white);
+      font-family: Oxanium;
+      font-size: 2.5rem;
+      font-weight: 500;
+      margin: 0 0 0.5rem 0;
+    }
+    h3 {
+      // sub text
+      color: var(--light-gray);
+      font-family: "Space Grotesk";
+      font-size: 1rem;
+      font-weight: 400;
+      margin: 0 0 1rem 0;
+    }
+    h4{
+      // body text 
+      color: var(--light-gray);
+      font-family: "Space Grotesk";
+      font-size: 1.25rem;
+      font-weight: 400;
+      margin: 0 0 2rem 0;
+    }
+    button{
+      // button
+      padding: 0.63rem;
+      border-radius: 0.3125rem;
+      background: var(--off-white);
+      box-shadow: 0 5px 50px 0 rgba(0, 0, 0, 0.10);
+      border-color: var(--off-white);
 
-    border-radius: 0.3125rem;
-    border: 0.5px solid var(--off-white);
-    background: var(--off-white);
-
-    // text
-    color: var(--gray);
-    font-family: "Space Grotesk";
-    font-size: 1rem;
-    font-weight: 500;
+      // text
+      color: var(--gray);
+      font-family: "Space Grotesk";
+      font-size: 1rem;
+      font-weight: 500;
+      position: absolute;
+      bottom: 2rem;
+    }
+    &hover{
+      background:var(--off-white) ;
+    }
   }
 }
