--- a/app/(pages)/_components/structureWork/structurework.module.scss
+++ b/app/(pages)/_components/structureWork/structurework.module.scss
@@ -1,17 +1,16 @@
 .structureWork {
   background-color: var(--off-white);
-  padding: 42.4px 90px; 
+  padding: 0 6.25rem;
 }
 
 .container {
   display: flex;
   flex-direction: column;
   align-items: baseline;
-  gap: 64px;
+  gap: 4rem;
 }
 
 .header {
-  padding: 12.3px 77.5px; 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -63,18 +62,17 @@
 
 .projectCard {
   border-radius: 0.9375rem 0.9375rem 0 0;
-}
 
-.image {
-  img {
-    display: block;
-    width: 28.125rem;
-    height: 21rem;
-    border-radius: 0.9375rem 0.9375rem 0 0;
+  .image {
+    img {
+      display: block;
+      width: 28.125rem;
+      height: 21rem;
+      border-radius: 0.9375rem 0.9375rem 0 0;
+    }
   }
-}
 
-.cardLabel {
+  .cardLabel {
     display: flex;
     height: 3.875rem;
     padding: 2rem;
@@ -83,17 +81,17 @@
     align-items: flex-start;
     gap: 2.5rem;
     align-self: stretch;
-
     border-radius: 0 0 0.9375rem 0.9375rem;
-    background: var(--midnight);
+    background: var(--Blue-Gradient, linear-gradient(180deg, #000138 0%, #172B54 100%));
 
     h3 {
-    color: var(--off-white);
-    /* Subtext */
-    font-family: "Space Grotesk";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: normal;
-}
+      color: var(--off-white);
+      /* Subtext */
+      font-family: "Space Grotesk";
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: normal;
+    }
+  }
 }
 
