--- a/app/(pages)/_components/why-join-sss/why-join-sss.module.scss
+++ b/app/(pages)/_components/why-join-sss/why-join-sss.module.scss
@@ -1,12 +1,28 @@
 .section {
+  position: relative;
   display: flex;
   width: 100%;
   padding: 6.25rem;
   align-items: flex-start;
-  background: linear-gradient(180deg, #000138 0%, #172B54 100%);
+  overflow: hidden;
+}
+
+.bgImage {
+  object-fit: cover;
+  object-position: center;
+  z-index: 0;
+}
+
+.starLayer {
+  object-fit: cover;
+  object-position: center;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .content {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
