--- a/app/(pages)/Navbar/Nav.module.scss
+++ b/app/(pages)/Navbar/Nav.module.scss
@@ -1,20 +1,15 @@
 .nav {
   display: flex;
-  width: 90rem;
+  width: 100%;
   height: 6rem;
   padding: 2.5rem 6.25rem 0.625rem 6.25rem;
   flex-direction: row; 
   align-items: center;
   gap: 0.625rem;
   background-color: var(--white);
-  box-shadow: 0 5px 50px rgba(126, 132, 160, 0.10);
+  
   
   position: fixed;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1000;
-
 }
 
 .logo {
