--- a/app/_components/Navbar/Nav.module.scss
+++ b/app/_components/Navbar/Nav.module.scss
@@ -1,8 +1,7 @@
 .nav {
   display: flex;
   width: 100%;
-  height: 6rem;
-  padding: 2.5rem 6.25rem 0.625rem 6.25rem;
+  padding: 2rem 3.5rem;
   flex-direction: row; 
   align-items: center;
   gap: 0.625rem;
@@ -15,16 +14,12 @@
 .logo {
   display: flex;
   align-items: center;
-  position: relative;
-  width: 6.5625rem;
-  height: 6.5625rem;
-  aspect-ratio: 1/1;
-  overflow: hidden;
-  flex-shrink: 0; 
-  justify-content: center;
+  flex-shrink:0;
 
   img {
-   object-fit: cover;;
+    height: 4rem;
+    width:auto;
+
   }
 }
 
