--- a/app/_components/Navbar/Nav.module.scss
+++ b/app/_components/Navbar/Nav.module.scss
@@ -6,7 +6,7 @@
   padding: 1.6rem 5rem;
   flex-direction: row; 
   gap: 0.625rem;
-  background-color: var(--off-white);
+  background-color: var(--white);
 }
 
 .right{
