--- a/app/(pages)/_components/why-join-sss/why-join-sss.module.scss
+++ b/app/(pages)/_components/why-join-sss/why-join-sss.module.scss
@@ -1,7 +1,6 @@
 .section {
   position: relative;
   display: flex;
-  width: 100%;
   padding: 6.25rem;
   align-items: flex-start;
   overflow: hidden;
@@ -40,7 +39,7 @@
 
 .heading {
   align-self: stretch;
-  color: #FFF;
+  color: var(--off-white);
   font-family: Oxanium;
   font-size: 3rem;
   font-style: normal;
@@ -58,7 +57,7 @@
 
 .paragraph {
   align-self: stretch;
-  color: #FFF;
+  color: var(--off-white);
   font-family: "Space Grotesk";
   font-size: 1.25rem;
   font-style: normal;
@@ -68,7 +67,7 @@
 
 .paragraph2 {
   align-self: stretch;
-  color: #FFF;
+  color: var(--off-white);
   font-family: "Space Grotesk";
   font-size: 1.25rem;
   font-style: normal;
