--- a/app/(pages)/software-work/software-work.module.scss
+++ b/app/(pages)/software-work/software-work.module.scss
@@ -1,7 +1,7 @@
 
 .pageBody
 {
-  background: var(--Blue-Gradiant);
+  background: linear-gradient(180deg, #000138 0%, #172B54 100%);
   box-shadow: 0 5px 50px 0 rgba(0, 0, 0, 0.1);
   margin: 0;
   padding: 0;
@@ -17,7 +17,7 @@
   padding: 4rem 6rem;
 }
 
-
+// puts the header, description, and buttons to the left
 .LeftContainer
 {
   display: flex;
@@ -44,7 +44,7 @@
   font-style: normal;
   line-height: normal;
   font-family: "Space Grotesk";
-  color: var(--Off-White, #F7F7F7);
+  color: var(--white);
   width: 39.375rem;
   max-width: 45rem;
   margin-top: 50%;
@@ -73,13 +73,12 @@
   border: 0.5px solid var(--Off-White);
   background: rgba(247, 247, 247, 0.90);
   box-shadow: 0 5px 50px 0 rgba(0, 0, 0, 0.10);
-  color: var(--Grey);
+  color: var(--dark-gray); // change
   font-family: "Space Grotesk";
   font-size: 1rem;
   font-weight: 500;
-  padding: 0.625rem;
-  width: 19.6875rem;
-  height: 3.125rem;
+  padding: 0.8125rem 2rem;
+  min-width: 19.6875rem; // Allows the buttons to be even-sized horizontally no matter how long text is
   cursor: pointer;
   text-decoration: none;
 }
@@ -112,20 +111,12 @@
 .SVGContainer
 {
   display: flex;
-  flex-direction: row;
-  width: 32.125rem;
-  padding: 2.67713rem 2.67713rem 3.32563rem 2.67706rem;
-  justify-content: center;
-  flex-direction: column;
-  align-items: flex-end;
-  position: static;
-  right: 4rem;
-  top: 4rem;
+  align-self: center;
+  padding-right: 4rem;
 }
 
-
-:root{
-  --Blue-Gradiant: linear-gradient(180deg, #000138 0%, #172B54 100%);
-  --Off-White:#F7F7F7;
-  --Grey: #575757;
-}
+// :root{
+//   --Blue-Gradiant: linear-gradient(180deg, #000138 0%, #172B54 100%);
+//   --Off-White:#F7F7F7;
+//   --Grey: #575757;
+// }
