--- a/app/(pages)/software-work/software-work.module.scss
+++ b/app/(pages)/software-work/software-work.module.scss
@@ -12,9 +12,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: normal;
+  align-items: center;
   gap: 3rem;
   padding: 4rem 6rem;
+  // makes the page flex items align with window size (let me know to remove this)
+  max-width: 90rem;
+  margin: 0 auto;
 }
 
 // puts the header, description, and buttons to the left
@@ -23,6 +26,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  flex: 1;
 }
 
 .softwareHeader
@@ -113,6 +117,7 @@
   display: flex;
   align-self: center;
   padding-right: 4rem;
+  flex-shrink: 0;
 }
 
 // :root{
