--- a/app/(pages)/software-work/software-work.module.scss
+++ b/app/(pages)/software-work/software-work.module.scss
@@ -1,7 +1,8 @@
 
 .pageBody
 {
-  background: linear-gradient(180deg, #000138 0%, #172B54 100%);
+  // background: linear-gradient(180deg, #000138 0%, #172B54 100%);
+  background: var(--navy);
   box-shadow: 0 5px 50px 0 rgba(0, 0, 0, 0.1);
   margin: 0;
   padding: 0;
