--- a/app/(pages)/test_why_sponsor_us/page.module.scss
+++ b/app/(pages)/test_why_sponsor_us/page.module.scss
@@ -8,14 +8,25 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 0.625rem;
-    background: url(<path-to-image>) lightgray 0% 0% / 100px 100px repeat, linear-gradient(180deg, #000138 0%, #172B54 100%);
+    background: url('/public/Frame 1618873348.png') lightgray 0% 0% / 100px 100px repeat, linear-gradient(180deg, #000138 0%, #172B54 100%);
 
 }
 
+.textPictureContainer{
+    display: flex;
+    height: 23.3125rem;
+    justify-content: center;
+    align-items: center;
+    gap: 4.6875rem;
+    flex-shrink: 0;
+    align-self: stretch;
+}
+
 .SponsorUsTitle {
+    align-self: stretch;
     color: white;
     text-align: center;
-    font-family: Oxanium;
+    font-family: 'Oxanium';
     font-size: 3rem;
     font-style: normal;
     font-weight: 500;
@@ -23,29 +34,24 @@
 }
 
 .benefit{
-    background-color: #054483;
-    margin: 2rem;
-    padding: 1rem 2rem;
-    font-size:1.5rem;
-    border-radius: 0.5rem;
-    color:white;
+    height: 8.0625rem;
+    flex-shrink: 0;
+    align-self: stretch;
+    color: #FFF;
     font-family: "Space Grotesk";
     font-size: 1.25rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    
-    transition: transform 1s ease;
-    &:hover {
-      transform: scale(1.1);
-      transform: translateX(0.5)
-
-  }
 }
 
 .picture{
     width: 31rem;
     height: 23.1875rem;
     padding-top: 74.8%; 
+    border-radius: 0.9375rem;
+    background: url('/public/Frame 1618873348.png') lightgray -43.509px -37.68px / 116.959% 122.266% no-repeat;
+
+
 }
 
